# BitLab

./: .gitignore  LICENSE  MANIFEST.in  README.md  install.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_tests.py  setup.py  test_kernel_dispatch.py
.cursor/plans/: bitlab-package-improvements-a0f87f29.plan.md
bitcore/: __init__.py  config.py  ops.py
bitcore/kernels/: __init__.py  base.py  bitlinear_kernel_i8_pt_pt.py  registry.py
bitcore/kernels/bindings/: bitlinear_int8_pt_pt.cpp
bitcore/ops/: base.py  bitlinear.py
bitlayers/: __init__.py  base.py  bitlinear.py
bitmodels/: __init__.py  base.py
bitmodels/mlp/: __init__.py  config.py  model.py
docs/: README.md  index.md  installation.md
docs/api/: core.md  layers.md  models.md
docs/benchmarks/: results.md
docs/examples/: README.md  basic_usage.py  performance_analysis.py
docs/examples/mlp/: README.md  training.py
docs/tutorials/: getting_started.md
examples/basic/: mlp.py
examples/kernelbench/: detailed_bench.py  equivalence.py  simple_bench.py
examples/models/: mlp.py
scripts/: build_extensions.py  kernel_benchmark.py  kernel_check.py
src/bitcore/: __init__.py
src/bitcore/kernels/: __init__.py  base.py  bitlinear_kernel_i8_pt_pt.py  (+1 more)
src/bitlab/: __init__.py
src/bitlayers/: base.py  bitlinear.py
src/bitmodels/: __init__.py
src/bitquantizer/: bitquantizer.py
src/bnn/: __init__.py
tests/: README.md  __init__.py  conftest.py  test_bitlab.py
tests/fixtures/: sample_data.py
tests/test_bitlayers/: __init__.py  test_bitlinear.py  test_registry.py
(+23 files in other folders)
