[build-system]
requires = ["setuptools>=61.0", "wheel", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "bitlab"
version = "0.1.0"
description = "BitLab - A library for bit-linear operations"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "torch",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "torch>=1.12.0",
    "numpy>=1.21.0",
    "torchvision>=0.13.0",
    "rich>=13.0.0",
]

[tool.setuptools]
packages = ["bitcore", "bitlayers", "bitmodels"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "unit: marks tests as unit tests (fast, isolated)",
    "integration: marks tests as integration tests (slower, test interactions)",
    "performance: marks tests as performance/benchmark tests",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "cpp: marks tests that require C++ extensions",
]